# email-newsletter-z2p

./: .dockerignore  .envrc  .gitignore  .justfile  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  codebook.toml  configuration.yaml  data.db  flake.nix
.cargo/: config.toml
.config/: hakari.toml
.github/workflows/: build.yaml
.sqlx/: query-3c7feb3e3c37e1690b7835d33e08483e456b513c17b5a3ab133e52daa1cbf2b0.json  query-3e37ff7d0ade3e80862ff99c6620944886183aef17943a62161bd032ac7fe81d.json  query-53be75b9db9e844536f1fdcc6b8c23f6affe2d827cae113832ede7a24dbd7b2a.json  query-5c588be8da8a309a525e23fe6c5f057f7e9f4020b7a2e701bfcff543cd12f108.json  query-5d28a4f6f2e1ced8e3ff25663f7be065561dc3709739585a66c7afc1994b9c85.json  query-6a64d566bf475b7193c1bfcc8c56a7608ebf1c784c879c84c296e9833f0b08c9.json  query-798f78b9eb9049a38b1c0f5a347dd378960532c3504f8e2133038aa4956791da.json  query-875908f52fe530942e806c6ddd892cea2246c837cd05e21228ccddbf43de0628.json  query-8e849ca89ccc7d23cd988fd8124484e79578d5d31095d171105ac010b6af0433.json  query-a194bc6266dbc1526a5e87ee439a25f4ffb1841c5d8d2415d574c4a2ec290ba7.json  query-c3edb3c2b76f05e773a38d28b3a6d558f851afa2444c99711e093e333c8b114e.json  query-cf860c957a7f158fa7e40edae697a5afaa1150ef840ec6885faa7d6c4a31b2d3.json  query-d140c29b1c6c105c2e877adf1d32555e1f93c2fce67a0e0684badfbd7fe14b8a.json  query-d2e8fcb1850d31c6263daf098fb5a765b3664d055fb49f3c685125de6524e5d2.json  query-e5c4aa807f7c5f3b1ae72d58fe38b4e40e56de708499d0d06e1ed0b905fbf42f.json  query-e8a1f46953a4482abf411d48316f1077543b5cfd963b9b02b8a7ec3eafa060eb.json
configuration/: base.json  local.json  production.json
crates/api/: Cargo.toml
crates/api/api-handler/: Cargo.toml
crates/api/api-handler/src/: authentication.rs  health.rs  lib.rs  newsletters.rs  routes.rs  session_state.rs  signup.rs  startup.rs  subscriptions.rs  subscriptions_confirm.rs  templates.rs
crates/api/api-handler/src/admin/: dashboard.rs  mod.rs
crates/api/api-handler/src/admin/newsletters/: get.rs  mod.rs  post.rs
crates/api/api-handler/src/admin/password/: change_password.html  get.rs  mod.rs  post.rs
crates/api/api-handler/src/home/: mod.rs
crates/api/api-handler/src/idempotency/: key.rs  mod.rs  persistence.rs  save_response.rs
crates/api/api-handler/src/login/: get.rs  post.rs
crates/api/api-handler/src/middlewares/: authentication.rs  extract_request_id.rs  mod.rs
crates/api/api-handler/src/templates/: admin_dashboard.html  admin_dashboard.jinja.html  admin_newsletters.jinja.html  change_password.jinja.html  login.jinja.html  mod.rs
crates/api/api-handler/src/utils/: auth_extractors.rs  authentication.rs  mod.rs
crates/api/api-handler/tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
crates/api/handler/: Cargo.toml
crates/api/handler/src/: lib.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
crates/api/handler/src/home/: home.html
crates/api/handler/tests/api/: helpers.rs
crates/api/repository/: Cargo.toml
crates/api/repository/src/: admin_dashboard.rs  authentication.rs  idempotency.rs  lib.rs  newsletters.rs  signup.rs  subscriptions.rs  subscriptions_confirm.rs  txn.rs
crates/api/service/: Cargo.toml
crates/api/service/src/: lib.rs
crates/api/src/: authentication.rs  lib.rs  routes.rs  startup.rs  subscriptions.rs  subscriptions_confirm.rs
crates/api/src/login/: login.html  post.rs
crates/api/src/middlewares/: extract_request_id.rs
crates/api/tests/api/: helpers.rs  newsletters.rs
crates/configuration/: Cargo.toml
crates/core/configuration/: Cargo.toml
crates/core/configuration/src/: lib.rs
crates/core/domain/: Cargo.toml
crates/core/domain/src/: confirmed_subscriber.rs  lib.rs
crates/core/types/: Cargo.toml
crates/core/types/src/: confirmed_subscriber.rs  idempotency.rs  lib.rs  new_subscriber.rs  subscriber_name.rs
crates/domain/: Cargo.toml
crates/domain/src/: subscriber_email.rs
crates/email-client/: Cargo.toml
crates/email-client/src/: lib.rs
crates/hakari-hack/: Cargo.toml
crates/infrastructure/email-client/: Cargo.toml
crates/infrastructure/email-client/src/: lib.rs
crates/infrastructure/telemetry/src/: lib.rs
crates/newsletter-macros/: Cargo.toml
crates/newsletter-macros/axum-error-helper/: Cargo.toml
crates/newsletter-macros/src/: lib.rs
crates/redis-client/: Cargo.toml
crates/redis-client/src/: lib.rs
crates/routes/: Cargo.toml  data.db  data.db-shm  data.db-wal  newsletter.db-shm  newsletter.db-wal
crates/routes/src/: authentication.rs  error.rs  health.rs  lib.rs  newsletters.rs  routes.rs  subscriptions.rs  subscriptions_confirm.rs
crates/routes/src/home/: home.html
crates/routes/src/login/: get.rs  login.html  post.rs
crates/routes/tests/api/: health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
migrations/: 20250721191906_create_subscriptions_table.sql  20251025082624_add_status_to_subscriptions.sql  20251025083651_make_status_not_null_in_subscriptions.sql  20251025083651_set_status_to_confirmed_in_subscriptions.sql  20251028154758_create_subscription_tokens_table.sql  20251213134505_create_users_table.sql  20260216123959_seed_user.sql  20260326161409_create_idempotency_table.sql
nix/: checks.nix  devshell.nix  packages.nix  redis.nix  treefmt.nix
src/: app_state.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscribe.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  health_test.rs  subscribe_test.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
(+6 files in other folders)
