[package]
name = "z2p"
version = "0.1.0"
authors = ["Darshan Kumawat <kumawatdarshan.1304@gmail.com>"]
edition = "2024"

# TODO: for dev purposes only, to be removed before pushing
[features]
sqlx-offline = []

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
axum = {version = "0.8.4", features = ["macros"]}
config = { version = "0.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "request-id", "util"] }

# Tracing 
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter", ] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"

uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
secrecy = { version = "0.10.3", features = ["serde"] }
unicode-segmentation = "1.12.0"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]


[dev-dependencies]
claims = "0.8.0"
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.2"
