[workspace.package]
version = "0.1.0"
authors = ["Darshan Kumawat <mail@darshan.qzz.io>"]
edition = "2024"
categories = ["api", "email", "newsletter"]
repository = "https://github.com/kumawatdarshan/email-newsletter-z2p"

[workspace]
resolver = "3"
members = [
  "crates/*",
]

[profile.release]
opt-level = 3           
lto = "thin"             
codegen-units = 1       
strip = true            
panic = "abort"         
debug = false           

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
config = { version = "0.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["rt-multi-thread"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", features = ["trace", "request-id", "util"] }
rand = { version = "0.9.2", features=["std_rng"] }

# Tracing 
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"

validator = { version = "0.20.0", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
unicode-segmentation = "1.12.0"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }
wiremock = "0.6.5"
dotenvy = "0.15.7"
linkify = "0.10.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
claims = "0.8.0"
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ] }

