[workspace.metadata.crane]
name = "email-newsletter-api"
version = "0.1.0"

[workspace.package]
version = "0.1.0"                                                     # need to figure out how to make it DRY
authors = ["Darshan Kumawat <mail@darshan.qzz.io>"]
edition = "2024"
categories = ["api", "email", "newsletter"]
repository = "https://github.com/kumawatdarshan/email-newsletter-z2p"

[workspace]
resolver = "3"
members = [
  "crates/api/*",
  "crates/bin/*",
  "crates/core/*",
  "crates/infrastructure/*",
  "crates/hakari-hack",
  "crates/newsletter-macros"
]

[profile.dev]
opt-level = 0
codegen-units = 256

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
debug = false

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
axum-messages = "0.8.0"
config = { version = "0.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["rt-multi-thread"] }
tower = { version = "0.5.2" }
tower-sessions = "0.14.0"                                                      # breaking bugs downstream
tower-http = { version = "0.6.6", features = ["trace", "request-id", "util"] }
rand = { version = "0.9.2", features = ["std_rng"] }

# Tracing 
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"

validator = { version = "0.20.0", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
unicode-segmentation = "1.12.0"
url = { version = "2.5.8", features = [
  "serde",
] } # reqwest 0.13 update removed serde feature so url re-export failed.
reqwest = { version = "0.13", features = [
  "cookies",
  "form",    # breaking-change in v0.13
  "json",
], default-features = false }
wiremock = "0.6.5"
dotenvy = "0.15.7"
linkify = "0.10.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
claims = "0.8.0"
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "sqlite",
  "uuid",
  "chrono",
  "migrate",
] }
base64 = "0.22.1"
sha3 = "0.10.8"
tower-sessions-redis-store = { version = "0.16.0", features = [
  "enable-rustls",
] }

# Local crates

configuration = { path = "crates/core/configuration" }
telemetry = { path = "crates/infrastructure/telemetry" }
email-client = { path = "crates/infrastructure/email-client" }
domain = { path = "crates/core/domain" }
redis-client = { path = "crates/infrastructure/redis-client" }
api_handler = { path = "crates/api/api-handler" }
hakari-hack = { path = "crates/hakari-hack" }
newsletter-macros = { path = "crates/newsletter-macros" }
