[package]
name = "configuration"
version.workspace = true
edition.workspace = true

[dependencies]
config.workspace = true
secrecy.workspace = true
serde.workspace = true
sqlx.workspace = true
url.workspace = true
dotenvy.workspace = true
tracing-log.workspace = true

domain.workspace = true
hakari-hack.workspace = true
