[package]
name = "domain"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
validator.workspace = true
unicode-segmentation.workspace = true
hakari-hack.workspace = true

[dev-dependencies]
claims.workspace = true
fake.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
