[package]
name = "email-client"
version.workspace = true
edition.workspace = true

[dependencies]
secrecy.workspace = true
serde.workspace = true
reqwest.workspace = true
configuration.workspace = true

domain.workspace = true
hakari-hack.workspace = true

[dev-dependencies]
claims.workspace = true
fake.workspace = true
wiremock.workspace = true
serde_json.workspace = true
tokio.workspace = true
