[package]
name = "redis-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
tower-sessions-redis-store.workspace = true
anyhow.workspace = true
configuration.workspace = true
secrecy.workspace = true
hakari-hack.workspace = true
