[package]
name = "routes"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tracing.workspace = true
anyhow.workspace = true
rand.workspace = true
thiserror.workspace = true
secrecy.workspace = true
tokio.workspace = true

settings.workspace = true
telemetry.workspace = true
email-client.workspace = true
domain.workspace = true
state.workspace = true
hakari-hack.workspace = true
newsletter-macros.workspace = true
base64.workspace = true
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
linkify.workspace = true
serde_json.workspace = true
reqwest.workspace = true
