[package]
name = "routes"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tracing.workspace = true
anyhow.workspace = true
rand.workspace = true
thiserror.workspace = true
secrecy.workspace = true
tokio.workspace = true

settings.workspace = true
telemetry.workspace = true
email-client.workspace = true
domain.workspace = true
state.workspace = true
hakari-hack.workspace = true
newsletter-macros.workspace = true
base64.workspace = true
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
axum-extra = { version = "0.12.5", features = ["cookie"] }

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
linkify.workspace = true
serde_json.workspace = true
reqwest.workspace = true
