[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
secrecy.workspace = true
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
tower-sessions-redis-store.workspace = true

email-client.workspace = true
routes.workspace = true
settings.workspace = true
telemetry.workspace = true
state.workspace = true
hakari-hack.workspace = true
