[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
secrecy.workspace = true
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
tower-sessions-redis-store.workspace = true

email-client.workspace = true
api.workspace = true
configuration.workspace = true
telemetry.workspace = true
redis-client.workspace = true
hakari-hack.workspace = true
