[package]
name = "state"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
sqlx.workspace = true
secrecy.workspace = true
axum.workspace = true

email-client.workspace = true
settings.workspace = true
hakari-hack.workspace = true
