[package]
name = "telemetry"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true

hakari-hack.workspace = true
