[package]
name = "repository"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
domain.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
secrecy.workspace = true
tokio.workspace = true
