[package]
name = "repository"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
domain.workspace = true
tracing.workspace = true # debatable, i will figure out later.
secrecy.workspace = true
argon2 = { version = "0.5.3", features = ["std"] }
thiserror.workspace = true
