[package]
name = "repository"
version.workspace = true
edition.workspace = true

[dependencies]
futures-util = "0.3"
sqlx.workspace = true
types.workspace = true
tracing.workspace = true                           # debatable, i will figure out later.
secrecy.workspace = true
argon2 = { version = "0.5.3", features = ["std"] }
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true
